logs/ntrace.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ntrace'...
Compiling './lib/python3.5/site-packages/ntrace/trace.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (trace.py, line 143)
Listing './lib/python3.5/site-packages/ntrace-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/access2_test.py'...
***   File "./lib/python3.5/site-packages/tests/access2_test.py", line 4
    print a[ 'c' ]
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/access_test.py'...
***   File "./lib/python3.5/site-packages/tests/access_test.py", line 21
    print hashAccess()
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/bintree_test.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (bintree_test.py, line 7)
Compiling './lib/python3.5/site-packages/tests/fact_test.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (fact_test.py, line 5)
Compiling './lib/python3.5/site-packages/tests/romanNumbers_test.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (romanNumbers_test.py, line 6)
Compiling './lib/python3.5/site-packages/tests/showtype_test.py'...
***   File "./lib/python3.5/site-packages/tests/showtype_test.py", line 7
    print "type: ", a.__name__
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_ntrace2.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (test_ntrace2.py, line 8)
Listing './share'...
Listing './share/python-wheels'...
